syntax = "proto3";

option csharp_namespace = "Message.Grpc";

package greet;

service Greeter {
  rpc LogMessage (LogMessageRequest) returns (LogMessageReply);
}

message LogMessageRequest {
  string id = 1;
  string text = 2;
}

message LogMessageReply {
  bool status = 1;
}
